[project]
name = "tasksflow"
version = "0.1.0"
description = "Supporting complex processes through tasks"
authors = [
    { name = "117503445", email = "t117503445@gmail.com" }
]
dependencies = [
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tasksflow"]

[tool.hatch.build]
exclude = [
    ".vscode",
    ".gitignore",
    "docker-compose.yml",
    "Dockerfile.dev",
]