[project]
name = "tasksflow"
version = "0.2.3"
description = "Handling Complex Workflows with Tasks"
authors = [{ name = "117503445", email = "t117503445@gmail.com" }]
dependencies = ["loguru>=0.7.2"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "aiohttp>=3.9.5",
    "pytest-asyncio>=0.23.6",
    "fastapi>=0.110.2",
    "requests>=2.31.0",
    "uvicorn>=0.29.0",
    "types-requests>=2.31.0.20240406",
    "ruff>=0.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tasksflow"]

[tool.hatch.build]
exclude = [".vscode", ".gitignore", "docker-compose.yml", "Dockerfile.dev"]
